# gerador-codigo-barras

./: .gitignore  README.md  gerador.py  main.py  pyproject.toml  requirements.txt
gerador_pdf/: main.py
