[tool.poetry]
name = "gerador-pdf"
packages = [
    { include = "gerador_pdf" }
]
version = "0.1.0"
description = "PDF generator with barcodes for storage addresses"
authors = ["Rafael Costa <rafaeladriancordeirocosta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.5.67"
openpyxl = "^3.0.9"
pywin32 = { version = "^303", platform = "windows" }
rich = "^10.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"